finish todotask app

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <div class="container">
-  <app-todoitem></app-todoitem>
+<app-header></app-header>
+<app-navbar></app-navbar>
+<app-todoitem></app-todoitem>
 </div>
