--- a/src/app/todoitem/todoitem.component.html
+++ b/src/app/todoitem/todoitem.component.html
@@ -1,42 +1,54 @@
+
 <div class="row">
   <div class="col-md-5">
     <!-- We will build this form using ReactiveForm based on the property "form" inside customerservice.ts  -->
-    <form [formGroup]="this.customerService.form">
+    <form [formGroup]="this.todoitemService.form" (ngSubmit)="onSubmit()">
       <input type="hidden" formControlName="$key"><!-- this is a primary key for each record of customer and after that we can display the active form control-->
       <div class="form-group">
         <label>Task</label>
-        <input formControlName="fullName" class="form-control"><!-- the value of the formControlName must match the name that we provided inside FormGroup in CustomerService class -->
+        <input formControlName="task" class="form-control"><!-- the value of the formControlName must match the name that we provided inside FormGroup in CustomerService class -->
       </div>
+
       <div class="form-group">
-        <label>Status</label>
-        <div class="dropup">
-  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-    Dropup
-    <span class="caret"></span>
-  </button>
-  <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
-    <li><a href="#">Action</a></li>
-    <li><a href="#">Another action</a></li>
-    <li><a href="#">Something else here</a></li>
-    <li role="separator" class="divider"></li>
-    <li><a href="#">Separated link</a></li>
-  </ul>
-</div>
-      </div>
-      <div class="form-group">
+      <label>Status</label>
+      <select formControlName="status" class="form-control">
+        <option value="remaining">Remaining</option>
+        <option value="inprogress">In Progress</option>
+        <option value="done">Done</option>
+      </select>
+    </div>
+
+      <div class="form-group input-group date">
         <label>Deadline</label>
-        <input formControlName="mobile" class="form-control">
+        <input formControlName="deadline" class="form-control" type="date">
       </div>
       <div class="form-group">
         <label>Incharge</label>
-        <input formControlName="location" class="form-control">
+        <input formControlName="incharge" class="form-control">
       </div>
+
+      <div class="form-group">
+      <label>Priority</label>
+      <select formControlName="priority" class="form-control">
+        <option value="high">High</option>
+        <option value="medium">Medium</option>
+        <option value="low">Low</option>
+      </select>
+    </div>
+
       <div class="form-group">
         <input type="submit" class="btn btn-primary" value="Submit"><!-- the value of the formControlName must match the name that we provided inside FormGroup in CustomerService class -->
       </div>
     </form>
+
+<div class="alert alert-info" *ngIf="showSuccessMessage">
+        submitted successfully.
+</div>
+
   </div>
   <div class="col-md-7">
     <app-todo-list></app-todo-list>
   </div>
 </div>
+
+
