changes in the status input field

--- a/src/app/todoitem/todoitem.component.html
+++ b/src/app/todoitem/todoitem.component.html
@@ -12,7 +12,7 @@
       <div class="form-group">
       <label>Status</label>
       <select formControlName="status" class="form-control">
-        <option value="remaining">Remaining</option>
+        <option value="open">Open</option>
         <option value="inprogress">In Progress</option>
         <option value="done">Done</option>
       </select>
